tests/invalid/div_assign_int/main.py
def run_case() -> None:
    x: int = 10

    x /= 2

if __name__ == "__main__":
    run_case()
